navigation and logo for desktop done

--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Responsive Flowers</title>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=shopping_cart" />
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
+
 <body>
-    
+    <header>
+        <section class="menu-container m-auto w-6xl h-20 flex justify-between items-center">
+            <div class="logo ">
+                <img src="assets/logo.png" alt="">
+            </div>
+            <div class="menu-list">
+                <ul>
+                    <li class="px-12 py-5 my-6 inline inline-block"><a href="">Home</a></li>
+                    <li class="px-12 py-5 my-6 inline inline-block"><a href="">shop</a></li>
+                    <li class="px-12 py-5 my-6 inline inline-block"><a href="">About Us</a></li>
+                    <li class="  py-5 my-6inline inline-block">
+                        <a href=""><span id="cart" class="material-symbols-outlined">shopping_cart</span></a>
+                    </li>
+                    <li class=" py-5 my-6 inline inline-block">
+                        <a href=""> Cart($56) </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+
+
+
+
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
