hero section done for desktop

--- a/index.html
+++ b/index.html
@@ -33,12 +33,36 @@
         </section>
 
 
+        <!-- banner section  -->
+        <section class="banner-container flex justify-between items-center mt-40 mb-32 w-6xl m-auto">
+            <div class="banner-heading">
+                <h1>ALWAYS <span class="primary-color"> FRESH
+                    FLOWERS</span>
+                </h1>
+                <p class="para-color">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
 
+            </div>
+            <div class="banner-img">
+                <img src="assets/hero-flower.png" alt="">
 
-
-
+            </div>
+        </section>
     </header>
     <main>
+        <section class="plants-container text-center mb-12">
+            <div class="plants-heading ">
+                <h2 class="heading-style mb-4"> <span class="primary-color">Our</span> Plants                </h2>
+                <p class="para-color">
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+                </p>
+            </div>
+        </section>
+        <section class="card-container">
+
+            </section>
+
+
+
 
     </main>
     <footer>
