plant section for desktop

--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
         <section class="banner-container flex justify-between items-center mt-40 mb-32 w-6xl m-auto">
             <div class="banner-heading">
                 <h1>ALWAYS <span class="primary-color"> FRESH
-                    FLOWERS</span>
+                        FLOWERS</span>
                 </h1>
-                <p class="para-color">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+                <p class="para-color">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+                    classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any
+                    occasion. </p>
 
             </div>
             <div class="banner-img">
@@ -51,18 +53,111 @@
     <main>
         <section class="plants-container text-center mb-12">
             <div class="plants-heading ">
-                <h2 class="heading-style mb-4"> <span class="primary-color">Our</span> Plants                </h2>
+                <h2 class="heading-style mb-4"> <span class="primary-color">Our</span> Plants </h2>
                 <p class="para-color">
-                    Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                    exotic blooms, we offer a wide variety of fresh.
                 </p>
             </div>
         </section>
-        <section class="card-container">
 
-            </section>
+        <!-- <section class="card-container flex justify-around w-6xl h-[1187px] w-auto ">
 
+            
 
+        </section> -->
+        <section class="card-container grid grid-cols-4 gap-x-4 gap-y-8 justify-around w-6xl m-auto ">
+            <div class="cards">
+                <img class="mb-8" src="assets/sample-flower-image.png" alt="">
+                <div class="card-discription text-center ">
+                    <h4>Lily Blossom</h4>
+                    <h3>20 USD</h3>
 
+                </div>
+                <div class="button mt-8">
+                    <button class="px-5 py-5 rounded">ADD TO CART</button>
+                </div>
+            </div>
+            <div class="cards">
+                <img class="mb-8" src="assets/sample-flower-image.png" alt="">
+                <div class="card-discription text-center ">
+                    <h4>Lily Blossom</h4>
+                    <h3>20 USD</h3>
+
+                </div>
+                <div class="button mt-8">
+                    <button class="px-5 py-5 rounded">ADD TO CART</button>
+                </div>
+            </div>
+            <div class="cards">
+                <img class="mb-8" src="assets/sample-flower-image.png" alt="">
+                <div class="card-discription text-center ">
+                    <h4>Lily Blossom</h4>
+                    <h3>20 USD</h3>
+
+                </div>
+                <div class="button mt-8">
+                    <button class="px-5 py-5 rounded">ADD TO CART</button>
+                </div>
+            </div>
+            <div class="cards">
+                <img class="mb-8" src="assets/sample-flower-image.png" alt="">
+                <div class="card-discription text-center ">
+                    <h4>Lily Blossom</h4>
+                    <h3>20 USD</h3>
+
+                </div>
+                <div class="button mt-8">
+                    <button class="px-5 py-5 rounded">ADD TO CART</button>
+                </div>
+            </div>
+
+            <div class="cards">
+                <img class="mb-8" src="assets/sample-flower-image.png" alt="">
+                <div class="card-discription text-center ">
+                    <h4>Lily Blossom</h4>
+                    <h3>20 USD</h3>
+
+                </div>
+                <div class="button mt-8">
+                    <button class="px-5 py-5 rounded">ADD TO CART</button>
+                </div>
+            </div>
+            <div class="cards">
+                <img class="mb-8" src="assets/sample-flower-image.png" alt="">
+                <div class="card-discription text-center ">
+                    <h4>Lily Blossom</h4>
+                    <h3>20 USD</h3>
+
+                </div>
+                <div class="button mt-8">
+                    <button class="px-5 py-5 rounded">ADD TO CART</button>
+                </div>
+            </div>
+            <div class="cards">
+                <img class="mb-8" src="assets/sample-flower-image.png" alt="">
+                <div class="card-discription text-center ">
+                    <h4>Lily Blossom</h4>
+                    <h3>20 USD</h3>
+
+                </div>
+                <div class="button mt-8">
+                    <button class="px-5 py-5 rounded">ADD TO CART</button>
+                </div>
+            </div>
+            <div class="cards">
+                <img class="mb-8" src="assets/sample-flower-image.png" alt="">
+                <div class="card-discription text-center ">
+                    <h4>Lily Blossom</h4>
+                    <h3>20 USD</h3>
+
+                </div>
+                <div class="button mt-8">
+                    <button class="px-5 py-5 rounded">ADD TO CART</button>
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <footer>
