adding lover section for desktop

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             </div>
             <div class="menu-list">
                 <ul>
-                    <li class="px-12 py-5 my-6 inline inline-block"><a href="">Home</a></li>
-                    <li class="px-12 py-5 my-6 inline inline-block"><a href="">shop</a></li>
-                    <li class="px-12 py-5 my-6 inline inline-block"><a href="">About Us</a></li>
-                    <li class="  py-5 my-6inline inline-block">
-                        <a href=""><span id="cart" class="material-symbols-outlined">shopping_cart</span></a>
+                    <li class="sm:invisible md:visible lg:visible xl:visible px-12 py-5 my-6 inline inline-block"><a href="">Home</a></li>
+                    <li class=" sm:invisible md:visible lg:visible xl:visible px-12 py-5 my-6 inline inline-block"><a href="">shop</a></li>
+                    <li class=" sm:invisible md:visible lg:visible xl:visible px-12 py-5 my-6 inline inline-block"><a href="">About Us</a></li>
+                    <li class=" sm:visible py-5 my-6 inline inline-block">
+                        <a href=""><span id="cart" class=" sm:visible material-symbols-outlined">shopping_cart</span></a>
                     </li>
-                    <li class=" py-5 my-6 inline inline-block">
+                    <li class=" sm:visible py-5 my-6 inline inline-block">
                         <a href=""> Cart($56) </a>
                     </li>
                 </ul>
@@ -74,8 +74,8 @@
                     <h3>20 USD</h3>
 
                 </div>
-                <div class="button mt-8">
-                    <button class="px-5 py-5 rounded">ADD TO CART</button>
+                <div class="button mt-8 ">
+                    <button class="px-5 py-5 rounded font-semibold">ADD TO CART</button>
                 </div>
             </div>
             <div class="cards">
@@ -158,6 +158,24 @@
             </div>
 
         </section>
+
+        <section class="lover-container w-6xl m-auto mt-52">
+            <div class="img-section">
+                <img src="assets/flower-store.png" alt="">
+            </div>
+            <div class="lover-heading">
+                <h2></h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </section>
+
+
+
+        
 
     </main>
     <footer>
