complete plant lover section and create badge rotation

--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
             </div>
             <div class="menu-list">
                 <ul>
-                    <li class="sm:invisible md:visible lg:visible xl:visible px-12 py-5 my-6 inline inline-block"><a href="">Home</a></li>
-                    <li class=" sm:invisible md:visible lg:visible xl:visible px-12 py-5 my-6 inline inline-block"><a href="">shop</a></li>
-                    <li class=" sm:invisible md:visible lg:visible xl:visible px-12 py-5 my-6 inline inline-block"><a href="">About Us</a></li>
+                    <li class="sm:invisible md:visible lg:visible xl:visible px-12 py-5 my-6 inline inline-block"><a
+                            href="">Home</a></li>
+                    <li class=" sm:invisible md:visible lg:visible xl:visible px-12 py-5 my-6 inline inline-block"><a
+                            href="">shop</a></li>
+                    <li class=" sm:invisible md:visible lg:visible xl:visible px-12 py-5 my-6 inline inline-block"><a
+                            href="">About Us</a></li>
                     <li class=" sm:visible py-5 my-6 inline inline-block">
-                        <a href=""><span id="cart" class=" sm:visible material-symbols-outlined">shopping_cart</span></a>
+                        <a href=""><span id="cart"
+                                class=" sm:visible material-symbols-outlined">shopping_cart</span></a>
                     </li>
                     <li class=" sm:visible py-5 my-6 inline inline-block">
                         <a href=""> Cart($56) </a>
@@ -159,23 +163,34 @@
 
         </section>
 
-        <section class="lover-container w-6xl m-auto mt-52">
-            <div class="img-section">
-                <img src="assets/flower-store.png" alt="">
+        <section class="lover-container  w-6xl m-auto mt-52 flex justify-between items-center">
+            <div class="img-section  max-w-1/2 ">
+                <div class="trusted-img  ">
+                    <img class="max-w-72 max-h-72 absolute " src="assets/trusted-badge.png" alt="">
+                </div>
+                <img class="w-full" src="assets/flower-store.png" alt="">
             </div>
-            <div class="lover-heading">
-                <h2></h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+            <div class="lover-heading max-w-1/2 ">
+                <div class="max-w-[540px]">
+                    <h2 class="heading-style p-4"> Flower & Plants Lover</h2>
+                    <ul class="p-4 ">
+                        <li class="para-color list-disc mt-5">Indulge your senses with the beauty and fragrance of our
+                            fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+                        </li>
+                        <li class="para-color list-disc mt-5">Indulge your senses with the beauty and fragrance of our
+                            fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+                        </li>
+                        <li class="para-color list-disc mt-5"> Indulge your senses with the beauty and fragrance of our
+                            fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
 
 
 
-        
+
 
     </main>
     <footer>
