--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
     </main>
     <footer>
-        <div class="footer-container sm:items-center flex-col w-[90rem] m-auto mt-52 flex justify-around gap-4 ">
+        <div class="footer-container w-[90rem] m-auto mt-52 flex justify-around gap-4 ">
             <div class="contents w-[22.43rem] h-[5.06rem] m-auto">
                 <div>
                 <img class="mb-3.5 w-[135px] h-[82px] cursor-pointer" src="assets/logo.png" alt="">
