--- a/index.html
+++ b/index.html
@@ -13,24 +13,20 @@
 
 <body>
     <header>
-        <section class=" menu-container m-auto w-6xl h-20 flex justify-between items-center">
+        <section class=" menu-container m-auto  w-6xl h-20 flex justify-between items-center">
             <div class="logo cursor-pointer ">
-                <img src="assets/logo.png" alt="">
+                <img class="" src="assets/logo.png" alt="">
             </div>
             <div class="menu-list">
                 <ul>
-                    <li class="px-12 py-5 my-6 inline "><a
-                            href="">Home</a></li>
-                    <li class="  px-12 py-5 my-6 inline "><a
-                            href="">shop</a></li>
-                    <li class="px-12 py-5 my-6 inline "><a
-                            href="">About Us</a></li>
-                    <li class=" sm:visible md:visible py-5 my-6 inline ">
+                    <li class=" text-black px-12 py-5 my-6 inline "><a href="">Home</a></li>
+                    <li class="  px-12 py-5 my-6 inline "><a href="">shop</a></li>
+                    <li class="px-12 py-5 my-6 inline "><a href="">About Us</a></li>
+                    <li class="py-5 my-6 inline ">
                         <a href="">
-                        <span id="cart"
-                                class=" sm:visible material-symbols-outlined">shopping_cart</span></a>
+                            <span id="cart" class=" text-black material-symbols-outlined">shopping_cart</span></a>
                     </li>
-                    <li class=" sm:visible py-5 my-6 inline ">
+                    <li class=" cart text-black py-5 my-6 inline ">
                         <a href=""> Cart($56) </a>
                     </li>
                 </ul>
@@ -39,7 +35,7 @@
 
 
         <!-- banner section  -->
-        <section class="banner-container flex justify-between items-center mt-40 mb-32  m-auto sm:w-screen max-w-6xl">
+        <section class="banner-container flex justify-between items-center mt-40 mb-32  m-auto w-screen max-w-6xl">
             <div class="banner-heading">
                 <h1>ALWAYS <span class="primary-color"> FRESH
                         FLOWERS</span>
@@ -55,7 +51,7 @@
             </div>
         </section>
     </header>
-    <main class="">
+    <main class=" display">
         <section class="plants-container text-center mb-12">
             <div class="plants-heading ">
                 <h2 class="heading-style mb-4"> <span class="primary-color">Our</span> Plants </h2>
@@ -185,7 +181,7 @@
         </section>
 
 
-<!-- deals section  -->
+        <!-- deals section  -->
         <section class="deal-container w-6xl text-center mt-52 m-auto ">
             <div class="plants-heading mb-28">
                 <h2 class="heading-style mb-4 m-auto"> <span class="primary-color">Latest</span> Deals</h2>
@@ -195,16 +191,19 @@
                 </p>
             </div>
             <div class="shop-now grid grid-flow-col gap-5 w-[71.25rem] h-[26.4rem]">
-                <div class="bg-img bg-[url(assets/deal-bloom.png)]  w-[22.9rem] h-[12.3rem] rounded-3xl bg-no-repeat bg-center col-span-1 flex justify-center items-center flex-col">
+                <div
+                    class="bg-img bg-[url(assets/deal-bloom.png)]  w-[22.9rem] h-[12.3rem] rounded-3xl bg-no-repeat bg-center col-span-1 flex justify-center items-center flex-col">
                     <h3 class="font-inter font-bold text-[1.25rem] text-white ">60% Off | Bloom Plant</h3>
                     <h4 class="font-inter font-semibold text-[1.0rem] text-white underline">Shop Now</h4>
                 </div>
-                <div class="bg-img bg-[url(assets/deal-ana.png)]  w-[22.9rem] h-[12.3rem] rounded-3xl bg-no-repeat bg-cente col-span-1 flex justify-center items-center flex-col">
+                <div
+                    class="bg-img bg-[url(assets/deal-ana.png)]  w-[22.9rem] h-[12.3rem] rounded-3xl bg-no-repeat bg-cente col-span-1 flex justify-center items-center flex-col">
                     <h3 class="font-inter font-bold text-[1.25rem] text-white ">30% Off | Bloom Plant</h3>
                     <h4 class="font-inter font-semibold text-[1.0rem] text-white underline">Shop Now</h4>
                 </div>
-                
-                <div class="bg-img bg-[url(assets/deal-zabo.png)] w-[47rem] h-[26.4rem] rounded-3xl bg-no-repeat bg-center flex justify-center items-center flex-col row-span-2">
+
+                <div
+                    class="bg-img bg-[url(assets/deal-zabo.png)] w-[47rem] h-[26.4rem] rounded-3xl bg-no-repeat bg-center flex justify-center items-center flex-col row-span-2">
                     <h3 class="font-noto font-bold text-[2.5rem] text-white ">30% Off | Bloom Plant</h3>
                     <h4 class="font-inter font-semibold text-[1.75rem] text-white underline">Shop Now</h4>
 
@@ -215,23 +214,27 @@
         </section>
 
         <!-- join section  -->
-         <section class="join-content bg-[url(assets/news-letter-bg.png)] bg-no-repeat bg-cover w-[90rem] m-auto h-[33.33rem] text-center  mt-52 flex justify-center items-center ">
+        <section
+            class="join-content bg-[url(assets/news-letter-bg.png)] bg-no-repeat bg-cover w-[90rem] m-auto h-[33.33rem] text-center  mt-52 flex justify-center items-center ">
             <div class="title-section w-[51.8rem] h-[8.81rem] m-auto">
                 <h1 class="font-noto font-bold text-white text-5xl mb-[1.9rem]">Join the colorful Bunch</h1>
-                <input class="bg-white outline-0 w-[40.25rem] py-[1.06rem] pl-[1.25rem]" type="email" name="" placeholder="Write Email" id="">
-                <input class="px-[50px] cursor-pointer py-[17px] bg-[#E95A08] ml-[-10px] text-white" type="button" value="Subscribe">
+                <input class="bg-white outline-0 w-[40.25rem] py-[1.06rem] pl-[1.25rem]" type="email" name=""
+                    placeholder="Write Email" id="">
+                <input class="px-[50px] cursor-pointer py-[17px] bg-[#E95A08] ml-[-10px] text-white" type="button"
+                    value="Subscribe">
 
             </div>
 
-         </section>
+        </section>
 
     </main>
-    <footer>
+    <footer class="display">
         <div class="footer-container w-[90rem] m-auto mt-52 flex justify-around gap-4 ">
             <div class="contents w-[22.43rem] h-[5.06rem] m-auto">
                 <div>
-                <img class="mb-3.5 w-[135px] h-[82px] cursor-pointer" src="assets/logo.png" alt="">
-                <p class="w-[22.43rem] h-[5.06rem] m-auto">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+                    <img class="mb-3.5 w-[135px] h-[82px] cursor-pointer" src="assets/logo.png" alt="">
+                    <p class="w-[22.43rem] h-[5.06rem] m-auto">Indulge your senses with the beauty and fragrance of our
+                        fresh flower shop. </p>
                 </div>
             </div>
             <div class="menu-link ">
@@ -262,4 +265,5 @@
         </div>
     </footer>
 </body>
+
 </html>
