--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <header class="header">
             <a href="./index.html" class="logo">
-                <img src="./assets/logo.png" alt="Programming Hero Logo">
+                <img src="./assets/logo.png" alt="">
             </a>
             <div class="menu">
                 <nav class="navbar">
