--- a/index.html
+++ b/index.html
@@ -180,6 +180,53 @@
         </section>
     </main>
 
+
+    <footer class="footer-section">
+        <div class="newsletter-container">
+            <div class="newsletter-content">
+                <h2 class="newsletter-title">Join the colorful Bunch</h2>
+                <form class="newsletter-form">
+                    <input type="email" name="email" id="email" required placeholder="Enter your email">
+                    <button type="submit" class="newsletter-btn">Subscribe</button>
+                </form>
+            </div>
+
+        </div>
+        <div class="footer-container container">
+            <div class="footer-logo">
+                <a href="./index.html">
+                    <img src="./assets/logo.png" alt="Programming Hero Logo">
+                </a>
+                <p class="footer-logo-description">Indulge your senses with the beauty and fragrance of our fresh flower
+                    shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="footer-links1">
+                <ul class="footer-links-list">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About us</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#faq">FAQ</a></li>
+                    <li><a href="#contact">Contat us</a></li>
+                </ul>
+            </div>
+            <div class="footer-links2">
+                <ul class="footer-links-list">
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#privacy-policy">Privacy Policy</a></li>
+                    <li><a href="#terms-of-service">Terms of Service</a></li>
+                    <li><a href="#help-center">Help Center</a></li>
+                </ul>
+            </div>
+            <div class="footer-social-links">
+                <img src="./assets/icon-linkedin.png" alt="">
+                <img src="./assets/icon-twitter.png" alt="">
+                <img src="./assets/icon-facebook.png" alt="">
+                <img src="./assets/icon-youtube.png" alt="">
+            </div>
+        </div>
+    </footer>
+
     
 
 
